[tool.poetry]
name = "ttfnet"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cython = "^0.29.14"
torch = "^1.3"
mmcv = "^0.2.14"
torchvision = "^0.4.2"
terminaltables = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
